# omniff

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  deploy.sh  omniff.yaml
.github/workflows/: ci.yml
crates/omniff-cli/: Cargo.toml
crates/omniff-cli/src/: main.rs
crates/omniff-core/: Cargo.toml
crates/omniff-core/src/: error.rs  filter.rs  frame.rs  lib.rs  modality.rs  model.rs  node.rs  packet.rs  prompt.rs  validator.rs
crates/omniff-graph/: Cargo.toml
crates/omniff-graph/src/: edge.rs  graph.rs  lib.rs  planner.rs  template.rs
crates/omniff-runtime/: Cargo.toml
crates/omniff-runtime/src/: config.rs  demuxer.rs  encoder.rs  executor.rs  lib.rs  router.rs  runtime.rs  scheduler.rs
docs/superpowers/plans/: 2026-05-23-omniff-mvp.md
graph_templates/: audio_dub.yaml  audio_to_text.yaml  audio_translate.yaml  image_to_image.yaml  text_to_image.yaml  text_to_text.yaml  translate.yaml  video_dub.yaml  video_to_video.yaml  voice_clone.yaml
huggingface/: README.md
huggingface/kaznu/: app.py
huggingface/space/: README.md  app.py  requirements.txt
k8s/: deployment.yaml
python/: pyproject.toml
python/omniff/: __init__.py  api.py  cli.py  client.py  demo.py  observability.py  plugins.py  reliability.py  thinking.py
python/omniff/agent/: executor.py  tools.py
python/omniff/bench/: profiler.py  recommend.py  suite.py
python/omniff/filters/: __init__.py  language.py
python/omniff/graph/: __init__.py  chain.py  executor.py  loader.py  planner.py  types.py  visualizer.py
python/omniff/integrations/: jupyter.py  langchain.py  llamaindex.py
python/omniff/models/: __init__.py  asr.py  base.py  chunked_asr.py  code.py  document_reader.py  image_edit.py  llm.py  pdf_generator.py  registry.py  text_to_image.py  translator.py  tts.py  video_captioner.py  vlm.py  voice_cloner.py
python/omniff/nodes/: __init__.py  registry.py
python/omniff/router/: __init__.py  encoder_router.py  keyword_router.py
python/omniff/runtime/: __init__.py  config.py  engine.py  result.py
python/omniff/scaling/: batch.py  compile.py  device_map.py  quantization.py  queue.py
python/omniff/scheduler/: model_scheduler.py
python/omniff/validators/: __init__.py  image_validator.py  pipeline.py  text_validator.py
tests/python/: conftest.py
tests/python/integration/: test_audio_to_text.py  test_document_to_text.py  test_image_to_image.py  test_image_to_text.py  test_multi_pipelines_gpu.py  test_text_to_image.py  test_text_to_text.py  test_video_to_text.py
tests/python/unit/: test_agent.py  test_api.py  test_asr.py  test_bench.py  test_chain.py  test_chunked_asr.py  test_cli.py  test_client.py  test_code.py  test_compile.py  test_config.py  test_document_reader.py  test_encoder_router.py  test_graph_executor.py  test_graph_planner.py  test_image_edit.py  test_jupyter.py  test_langchain.py  test_language_filter.py  test_llamaindex.py  test_llm.py  test_model_registry.py  test_model_scheduler.py  test_multi_pipelines.py  test_observability.py  test_pdf_generator.py  test_plugins.py  test_reliability.py  test_router.py  test_scaling.py  test_streaming.py  test_text_to_image.py  test_thinking.py  test_translator.py  test_tts.py  test_validation_pipeline.py  test_validators.py  test_video_captioner.py  test_visualizer.py  test_vlm.py  (+1 more)
web/: .gitignore  nuxt.config.ts  package-lock.json  package.json
web/assets/css/: main.css
web/backend/: server.py
web/components/: InputBar.vue
web/composables/: useApi.ts  usePipelines.ts  useWorkbench.ts
web/layouts/: default.vue
web/pages/: history.vue  index.vue  live.vue  pipelines.vue
web/server/api/: inference.post.ts
