[workspace]
resolver = "2"
members = [
    "crates/omniff-core",
    "crates/omniff-graph",
    "crates/omniff-runtime",
    "crates/omniff-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/stukenov/omniff"
description = "FFmpeg-like multimodal AI runtime"

[workspace.dependencies]
omniff-core = { path = "crates/omniff-core" }
omniff-graph = { path = "crates/omniff-graph" }
omniff-runtime = { path = "crates/omniff-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
