[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "saken-omniff"
version = "0.1.0"
description = "FFmpeg-like multimodal AI runtime — Python SDK"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "transformers>=4.40",
    "diffusers>=0.28",
    "accelerate>=0.30",
]
all = [
    "saken-omniff[torch]",
    "soundfile>=0.12",
    "opencv-python>=4.8",
]

[project.scripts]
omniff = "omniff.cli:main"

[project.urls]
Repository = "https://github.com/stukenov/omniff"

[tool.setuptools.packages.find]
where = ["."]
