[package]
name = "omniff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types: OmniPacket, OmniFrame, OmniNode, OmniModel, OmniFilter, OmniValidator"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
