[package]
name = "omniff-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAG planning, execution engine, and graph templates for OmniFF"

[dependencies]
omniff-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
